syntax = "proto3";

package auth;
option go_package="proto/auth";

// import "validate/validate.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 id = 1;
  string username = 2;
  string name = 3;
  int64 age = 4;
  string email = 5;
  string image = 6;
}